<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_name" />

        <!-- Input field -->
        <EditText
            android:id="@+id/edit_item_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_item_name"
            android:inputType="textCapWords" />

    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Input field -->
        <EditText
            android:id="@+id/edit_item_quantity"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_item_quantity"
            android:inputType="number" />
    </LinearLayout>


    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:hint="@string/hint_item_price"
                android:inputType="number"

                />

            <!-- Units for price ($) -->
            <TextView
                android:id="@+id/label_currency"
                style="@style/EditorUnitsStyle"
                android:layout_alignParentRight="true"
                android:text="@string/unit_item_price" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Re-Order category -->
    <LinearLayout
        android:id="@+id/container_reOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_reOrder" />

        <!-- Input field -->
        <EditText
            android:id="@+id/edit_item_reorder"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_reOrder"
            android:inputType="number" />
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input field -->
        <EditText
            android:id="@+id/edit_supplier_email"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_supplier"
            android:inputType="text" />
    </LinearLayout>

    <!-- Modify Quantity category -->
    <LinearLayout
        android:id="@+id/container_modify_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <!-- Label -->
        <TextView
            style="@style/ModifyCategoryStyle"
            android:text="@string/category_modify_quantity" />

        <!-- Input field -->
        <EditText
            android:id="@+id/edit_modify_quantity"
            style="@style/ModifyEditorFieldStyle"
            android:hint="@string/hint_item_quantity"
            android:inputType="number" />

        <!-- Modify Quantity buttons -->
        <LinearLayout
            android:id="@+id/container_modify_quantity_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <!-- Receive Order Button -->
            <Button
                android:id="@+id/receive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:background="@drawable/button_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"

                android:shadowDy="0"
                android:shadowRadius="2"
                android:text="@string/receive_order"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <!-- Sale Button -->
            <Button
                android:id="@+id/sale_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"

                android:shadowDy="0"
                android:shadowRadius="2"
                android:text="@string/sale"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
